# cube_builder

./: #COORDINATE_TODO.md#  #TODO.bk#  #TODO.md#  #face_click.md#  #requirements.md#  #shader_subsystem_refactoring.md#  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CLAUDE.md~  CMakeLists.txt  CMakeLists_debug.txt  COORDINATE_SYSTEM_FIX.md  COORDINATE_SYSTEM_ISSUES.md  COORDINATE_TODO.md  DESIGN.md  Doxyfile  HANG_ANALYSIS.md  INTENT.md  LICENSE  LOGGING_FIX_SOLUTION.md  OLD_TODO.md  PLACEMENT_UPDATE_PLAN.md  PLACEMENT_UPDATE_STATUS.md  PROJECT_SUMMARY.md  README.md  RENDER_VALIDATION.md  RENDER_VALIDATION_SIMPLE.md  REQUIREMENT_COVERAGE_STATUS.md  REQUIREMENT_TRACEABILITY.md  TODO.bk  TODO.md  TODO.md.bak  TODO2.md  TODO3.md  WORKSPACE_BOUNDARY_TEST_SUMMARY.md  agent_5_todo.md  analyze_render.py  build.sh  (+203 more)
apps/cli/: ADDING_COMMANDS.md  CLI_GUIDE.md  CMakeLists.txt  DESIGN.md  README.md  README_COMMAND_REFACTORING.md  TODO.md  requirements.md
apps/shader_test/: CMakeLists.txt
core/: CMakeLists.txt  DESIGN.md  TODO.md  agent_1_todo.md  agent_2_phase4_summary.md  agent_2_summary.md  agent_2_todo.md  agent_3_todo.md  agent_4_todo.md  agent_5_todo.md  run_tests.sh
core/camera/: ACTUAL_DESIGN.md  CMakeLists.txt  Camera.h  CameraController.h  DESIGN.md  OrbitCamera.h  QuaternionOrbitCamera.h  TODO.md  VOXEL_MATH_CHANGES.md  Viewport.h  requirements.md  run_tests.sh
core/file_io/: ACTUAL_IMPLEMENTATION_DESIGN.md  CMakeLists.txt  DESIGN.md  requirements.md  run_tests.sh
core/groups/: CMakeLists.txt  DESIGN.md  TODO.md  VOXEL_MATH_UPDATE_ANALYSIS.md  requirements.md  run_tests.sh
core/input/: CMakeLists.txt  DESIGN.md  InputHandler.h  InputManager.cpp  InputManager.h  InputMapping.cpp  InputMapping.h  InputTypes.cpp  InputTypes.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h  PlacementValidation.cpp  PlacementValidation.h  PlaneDetector.cpp  PlaneDetector.h  TODO.md  TouchHandler.cpp  TouchHandler.h  VOXEL_MATH_CHANGES.md  VOXEL_MATH_UPDATE_STATUS.md  VRInputHandler.cpp  VRInputHandler.h  requirements.md  run_tests.sh
core/rendering/: CMakeLists.txt  DESIGN.md  GroundPlaneGrid.cpp  GroundPlaneGrid.h  MacOSGLLoader.cpp  MacOSGLLoader.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderConfig.h  RenderContext.h  RenderEngine.cpp  RenderEngine.h  RenderState.cpp  RenderState.h  RenderStats.h  RenderTypes.cpp  RenderTypes.h  ShaderManager.cpp  ShaderManager.h  ShaderManagerSafe.cpp  ShaderManagerSafe.h  TODO.md  requirements.md  run_tests.sh  test_timing_profile.txt
core/selection/: BoxSelector.cpp  BoxSelector.h  CMakeLists.txt  DESIGN.md  FloodFillSelector.cpp  FloodFillSelector.h  PERFORMANCE_TESTING.md  REQUIREMENT_UPDATE_SUMMARY.md  SelectionManager.cpp  SelectionManager.h  SelectionRenderer.cpp  SelectionRenderer.h  SelectionSet.cpp  SelectionSet.h  SelectionTypes.cpp  SelectionTypes.h  SphereSelector.cpp  SphereSelector.h  TODO.md  requirements.md  run_performance.sh  run_tests.sh
core/surface_gen/: CMakeLists.txt  DESIGN.md  DualContouring.cpp  DualContouring.h  DualContouring.md  DualContouringFast.cpp  DualContouringFast.h  DualContouringNEON.cpp  DualContouringNEON.h  DualContouringOptimized.h  DualContouringSparse.cpp  DualContouringSparse.h  DualContouringTables.h  DualContouring_BACKUP.cpp  DualContouring_BACKUP.h  EdgeCache.h  GENERATOR_TEST_FIX_SUMMARY.md  MeshBuilder.cpp  MeshBuilder.h  MeshSmoother.cpp  MeshSmoother.h  MeshValidator.cpp  MeshValidator.h  OPTIMIZATION_SUMMARY.md  SimpleMesher.cpp  SimpleMesher.h  SimpleMesher.md  SurfaceGenerator.cpp  SurfaceGenerator.h  SurfaceTypes.cpp  SurfaceTypes.h  TODO.md  TopologyPreserver.cpp  TopologyPreserver.h  VECTORIZATION_GUIDE.md  VECTORIZATION_SUMMARY.md  VOXEL_MATH_MIGRATION.md  how_it_works.md  requirements.md  run_tests.sh
core/undo_redo/: CMakeLists.txt  Command.h  CompositeCommand.cpp  CompositeCommand.h  DESIGN.md  HistoryManager.cpp  HistoryManager.h  PlacementCommands.cpp  PlacementCommands.h  SelectionCommands.cpp  SelectionCommands.h  StateSnapshot.cpp  StateSnapshot.h  SystemCommands.cpp  SystemCommands.h  TODO.md  Transaction.cpp  Transaction.h  VOXEL_MATH_CHANGES.md  VoxelCommands.cpp  VoxelCommands.h  requirements.md  run_tests.sh
core/visual_feedback/: CMakeLists.txt  DESIGN.md  FACE_DETECTION.md  TODO.md  integration_requirements.md  requirements.md  run_tests.sh
core/voxel_data/: #TODO.md#  CMakeLists.txt  DESIGN.md  SparseOctree.cpp  SparseOctree.h  TODO.md  VoxelDataManager.h  VoxelGrid.cpp  VoxelGrid.h  VoxelTypes.h  WorkspaceManager.h  requirements.md  run_perf_tests.sh  run_performance.sh  run_tests.sh
foundation/config/: BuildConfig.h  CMakeLists.txt  ConfigManager.h  ConfigSection.h  ConfigValue.h  DESIGN.md
foundation/events/: CMakeLists.txt  CommonEvents.h  DESIGN.md  EventBase.h  EventDispatcher.h  EventHandler.h  TODO.md
foundation/logging/: CMakeLists.txt  DESIGN.md  LogOutput.h  Logger.h  PerformanceProfiler.h
foundation/math/: BoundingBox.h  CMakeLists.txt  CoordinateConverter.h  CoordinateTypes.h  DESIGN.md  MathUtils.h  Matrix4f.h  Quaternion.h  Ray.h  TODO.md  Vector2f.h  Vector2i.h  Vector3f.h  Vector3i.h  Vector4f.h
foundation/memory/: CMakeLists.txt  DESIGN.md  MemoryOptimizer.h  MemoryPool.h  MemoryTracker.h  TODO.md
foundation/voxel_math/: CMakeLists.txt  README.md
pipeline_test/: CMakeLists.txt  analyze_test3.py  analyze_test4.py  analyze_test6.py  build.sh  learnings.md  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  test.sh  todo.md  window.cpp  window.h
tests/integration/: CMakeLists.txt  test_camera_cube_visibility.cpp  test_camera_cube_visibility_simple.cpp  test_ground_plane_voxel_placement.cpp  test_integration_clear_command.cpp  test_integration_coordinate_consistency.cpp  test_integration_core_camera_cube_visibility.cpp  test_integration_core_camera_cube_visibility_simple.cpp  test_integration_core_dual_contouring_adjacent.cpp  test_integration_core_dual_contouring_debug.cpp  test_integration_core_dual_contouring_dense.cpp  test_integration_core_dual_contouring_simple.cpp  (+19 more)
(+4666 files in other folders)
