# Core layer components
add_subdirectory(voxel_data)
add_subdirectory(camera)
add_subdirectory(rendering)
add_subdirectory(input)
add_subdirectory(selection)
add_subdirectory(undo_redo)
add_subdirectory(surface_gen)
add_subdirectory(visual_feedback)
add_subdirectory(groups)
add_subdirectory(file_io)